# sky-observation-planner

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  catalog.c  catalog.h  download_data.sh  elevation_view.c  elevation_view.h  main.c  night_sky  sky_model.c  sky_model.h  sky_view.c  sky_view.h  source_selection.c  source_selection.h  target_list.c  target_list.h  test_crash  test_crash.c  test_ephem  test_ephem.c
